Update shangzhou.md